resources/assets/css/main.css
body {
  font-family: Palatino Linotype, serif;
  font-size: 2em;
  line-height: 1.5em;
  padding: 24px 0px 0px 0px;
  background-color: #fcfcfc;
  color: #666;
}
button,
.button,
input,
textarea,
select,
fieldset,
pre,
blockquote,
dl,
figure,
table,
p,
ul,
ol,
form {
  margin-bottom: 1.5em;
}
h1, h2, h3, h4, h5, h6 {
  letter-spacing: normal;
  line-height: 1em;
}
h1, h2 {
  color: #333;
  margin-bottom: 3rem;
}
h3, h4, h5, h6 {
  color: #4a4a4a;
  margin-bottom: 1rem;
}
header {
  margin-bottom: 3em;
}
header h1 {
  color: #333;
  margin-bottom: 0px;
  font-weight: bold;
  line-height: 60px;
}
.logo--link {
  color: #333;
  text-decoration: none;
}
.slogan {
  margin-top: -6px;
  margin-left: 48px;
  line-height: 1.2em;
}
.slogan:before {
  content: "/";
  margin-left: -12px;
  margin-right: 6px;
}
nav {
  height: 60px;
  line-height: 60px;
}
nav a {
  font-size: 2.4rem;
  font-weight: bold;
  margin-right: 24px;
  text-decoration: none;
}
nav a:last-child {
  margin-right: 0px;
}
nav a:hover {
  border-bottom: 3px solid #0FA0CE;
}
.content {
  margin-bottom: 3em;
}
.pictionary--word  {
  height: 24px;
}
.pictionary--letter h2 {
  margin-bottom: 0px;
}
.copyright {
  line-height: 1.2em;
}

@media (max-width: 550px) {
  .pictionary--letter {
    margin-top: 4rem;
  }
  .row:first-child .pictionary--letter {
    margin-top: 0px;
  }
}

